Добавлено оформление шрифта страницы index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -38,19 +44,19 @@
         <ul class="features list">
             <li>
                 <h3 class="features-title">Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                <p class="features-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li>
                 <h3 class="features-title">Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <p class="features-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
             <li>
                 <h3 class="features-title">Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <p class="features-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li>
                 <h3 class="features-title">Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <p class="features-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
     </section>
@@ -72,22 +78,22 @@
             <li>
                 <img src="./images/produkt-designer.jpg" alt="Дизайнер продукта" width="270">
                 <h3 class="employees-title">Игорь Демьяненко</h3>
-                <p lang="en">Product Designer</p>
+                <p lang="en" class="employees-position">Product Designer</p>
             </li>
             <li>
                 <img src="./images/frontend-developer.jpg" alt="Фронтенд-разработчик" width="270">
                 <h3 class="employees-title">Ольга Репина</h3>  
-                <p lang="en">Frontend Developer</p>
+                <p lang="en" class="employees-position">Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/markrting.jpg" alt="Маркетолог" width="270">
                 <h3 class="employees-title">Николай Тарасов</h3>     
-                <p lang="en">Marketing</p>
+                <p lang="en" class="employees-position">Marketing</p>
             </li>
             <li>
                 <img src="./images/ul-designer.jpg" alt="Дизайнер пользовательского интерфейса" width="270">
                 <h3 class="employees-title">Михаил Ермаков</h3>
-                <p lang="en">Designer</p>
+                <p lang="en" class="employees-position">Designer</p>
             </li>
         </ul>
     </section>
@@ -96,8 +102,8 @@
 
     <!--Футер-->
     <footer>
-        <a lang="en" href="" class="logo-footer">WebStudio</a>
-        <address>
+        <a lang="en" href="" class="logo">WebStudio</a>
+        <address class="address">
            <span class="address-footer">г. Киев, пр-т Леси Украинки, 26</span> <br>
             <a lang="en" href="mailto:info@devstudio.com" class="contacts-footer">info@devstudio.com</a><br>
             <a href="tel:+380961111111" class="contacts-footer">+38 096 111 11 11</a>
