--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,7 @@
 
 <!-- Кнопки фильтра -->
     <section>
+        <h1>Портфолио</h1>
         <ul class="list">
             <li><button type="button" class="button-filtr">Все</button></li>
             <li><button type="button" class="button-filtr">Веб-сайты</button></li>
@@ -93,7 +94,7 @@
 
     <!--Футер-->
     <footer>
-        <a lang="en" href="" class="logo-footer">WebStudio</a>
+        <a lang="en" href="" class="logo">WebStudio</a>
         <address>
             <span class="address-footer">г. Киев, пр-т Леси Украинки, 26</span> <br>
             <a lang="en" href="mailto:info@devstudio.com" class="contacts-footer">info@devstudio.com</a><br>
